small resource reference change; mild cleanup of main app

--- a/Infortainment_Control/app/src/main/res/menu/navigation.xml
+++ b/Infortainment_Control/app/src/main/res/menu/navigation.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_dvd"
         android:icon="@drawable/ic_router_black_24px"
-        android:title="DVD" />
+        android:title="@string/dvd" />
 
     <item
         android:id="@+id/navigation_premieres"
