--- a/Infortainment_Control/app/src/main/res/layout/settings_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/settings_layout.xml
@@ -6,93 +6,189 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp">
+        android:layout_height="70dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp">
 
         <TextView
-            android:text="Televisions"
+            android:text="TV Setup"
+            android:textStyle="bold"
             android:textSize = "30sp"
-            android:layout_width="wrap_content"
+            android:textColor="#212121"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/my_televisions_label"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
-            android:gravity="center"/>
-
-        <Button
-            android:id="@+id/add_television_btn"
-
-            android:text="+ Add"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-
-            android:layout_width="133dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_oval_add_device"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"
             android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:background="@drawable/header_settings_border"/>
+
     </RelativeLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="144dp">
+        android:layout_height="40dp"
+        android:paddingTop="15dp"
+        android:layout_weight="0.08"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-        <ListView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/manufacturer_input_label"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Manufacturer"
+                android:paddingLeft="10dp" />
 
+            <Spinner
+                android:id="@+id/manufacturer_input"
+                android:layout_width="230dp"
+                android:layout_height="match_parent"
+                android:textSize="30sp"                android:entries="@array/tv_manufacturer_array"
+                android:prompt="@string/manufacturer_input_prompt"
+                android:layout_alignBaseline="@+id/manufacturer_input_label"
+                android:layout_alignBottom="@+id/manufacturer_input_label"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="50dp"
+        android:layout_weight="0.08"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <TextView
+                android:id="@+id/device_input_label"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Device Type"
+                android:paddingLeft="10dp"/>
+
+            <Spinner
+                android:id="@+id/device_input"
+                android:layout_width="230dp"
+                android:layout_height="40dp"
+                android:textSize="30sp"
+                android:entries="@array/tv_manufacturer_array"
+                android:prompt="@string/manufacturer_input_prompt"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"></Spinner>
+        </RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp">
+        android:layout_height="60dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
-            android:text="Cable Boxes"
+            android:text="DVD Setup"
+            android:textStyle="bold"
             android:textSize="30sp"
-            android:layout_width="wrap_content"
+            android:textColor="#212121"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:id="@+id/textView2"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <Button
-            android:id="@+id/add_cable_box_btn"
-
-            android:text="+ Add"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-
-            android:layout_width="133dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_oval_add_device"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"
-            android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentStart="true"
+            android:background="@drawable/header_settings_border"/>
 
     </RelativeLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="144dp">
-
-        <ListView
+        android:layout_height="40dp"
+        android:paddingTop="15dp"
+        android:layout_weight="0.08"
+        android:orientation="vertical"
+        android:weightSum="1">
+d
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/dvd_manufacturer_input_label"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Manufacturer"
+                android:paddingLeft="10dp" />
+
+            <Spinner
+                android:id="@+id/dvd_manufacturer_input"
+                android:layout_width="230dp"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
+                android:entries="@array/tv_manufacturer_array"
+                android:prompt="@string/manufacturer_input_prompt"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="50dp"
+        android:layout_weight="0.08"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <TextView
+                android:id="@+id/dvd_device_input_label"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Device Type"
+                android:paddingLeft="10dp"/>
+
+            <Spinner
+                android:id="@+id/dvd_device_input"
+                android:layout_width="230dp"
+                android:layout_height="40dp"
+                android:textSize="30sp"
+                android:entries="@array/tv_manufacturer_array"
+                android:prompt="@string/manufacturer_input_prompt"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"></Spinner>
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
