--- a/Infortainment_Control/app/src/main/res/drawable/button_round_gray_pressed.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/button_round_gray_pressed.xml
@@ -4,7 +4,7 @@
         android:radius="500dp"
         />
     <solid
-        android:color="#FFFFFF"
+        android:color="#757575"
         />
     <padding
         android:left="0dp"
