--- a/Infortainment_Control/app/src/main/res/drawable/button_round_red.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/button_round_red.xml
@@ -4,7 +4,7 @@
         android:radius="500dp"
         />
     <solid
-        android:color="#A30808"
+        android:color="#E53935"
         />
     <padding
         android:left="0dp"
@@ -17,7 +17,7 @@
         android:height="100dp"
         />
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="#878787"
         />
 </shape>
