--- a/Infortainment_Control/app/src/main/res/drawable/button_square_black_border_pressed.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/button_square_black_border_pressed.xml
@@ -4,7 +4,7 @@
         android:radius="8dp"
         />
     <solid
-        android:color="#424242"
+        android:color="#616161"
         />
     <size
         android:width="60dp"
@@ -12,6 +12,6 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#212121"
+        android:color="#9E9E9E"
         />
 </shape>
