--- a/Infortainment_Control/app/src/main/res/drawable/header_settings_border.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/header_settings_border.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="20dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-    <stroke android:width="1dp" android:color="#212121"/>
-    <solid android:color="#0288D1"></solid>
+    <stroke android:width="1dp" android:color="#FFFFFF"/>
+    <solid android:color="#263238"></solid>
 </shape>
