--- a/Infortainment_Control/app/src/main/res/layout/settings_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/settings_layout.xml
@@ -15,7 +15,7 @@
             android:text="TV Setup"
             android:textStyle="bold"
             android:textSize = "30sp"
-            android:textColor="#212121"
+            android:textColor="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/my_televisions_label"
@@ -108,7 +108,7 @@
             android:text="DVD Setup"
             android:textStyle="bold"
             android:textSize="30sp"
-            android:textColor="#212121"
+            android:textColor="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
