--- a/Infortainment_Control/app/src/main/res/layout/premieres_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/premieres_layout.xml
@@ -10,7 +10,7 @@
         android:text="Television Premieres"
         android:textSize="30sp" />
 
-    <ScrollView
+   <!-- <ScrollView
         android:layout_width="match_parent"
         android:layout_height="337dp"
         android:fillViewport="true"
@@ -59,7 +59,7 @@
                 </TableRow>
             </TableLayout>
         </LinearLayout>
-    </ScrollView>
+    </ScrollView>-->
 
     <!--<LinearLayout
         android:orientation="vertical"
@@ -80,7 +80,8 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:id="@+id/listView1" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
