--- a/Infortainment_Control/app/src/main/res/layout/premieres_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/premieres_layout.xml
@@ -2,80 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/add_television_header"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Television Premieres"
-        android:textSize="30sp" />
-
-   <!-- <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="337dp"
-        android:fillViewport="true"
-        android:paddingTop="30dp"
+        android:layout_height="80dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="10dp"
         >
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/header"
+            android:textStyle="bold"
             android:layout_width="match_parent"
-            android:layout_height="348dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Television Premieres"
+            android:textSize="30sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/header_settings_border_lighter"/>
 
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/premieres_table">
-
-                <TableRow android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/runLabel"
-                        android:text="Name"
-                        android:textSize="20sp"
-                        android:layout_height="wrap_content"
-                        android:layout_width="204dp"
-                        android:background="@drawable/cell_shape"
-                        android:paddingLeft="10dp"
-                        />
-                    <TextView
-                        android:id="@+id/hitLabel"
-                        android:text="Date"
-                        android:textSize="20sp"
-                        android:layout_height="wrap_content"
-                        android:layout_width="90dp"
-                        android:background="@drawable/cell_shape"
-                        android:paddingLeft="10dp"
-                        />
-                    <TextView
-                        android:id="@+id/errorLabel"
-                        android:text="Time"
-                        android:textSize="20sp"
-                        android:layout_height="wrap_content"
-                        android:layout_width="90dp"
-                        android:background="@drawable/cell_shape"
-                        android:paddingLeft="10dp"
-                        />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
-    </ScrollView>-->
-
-    <!--<LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="1">
-    </LinearLayout>-->
-
+    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="348dp"
+        android:layout_height="370dp"
         android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="348dp"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <ListView
