--- a/Infortainment_Control/app/src/main/res/drawable/button_square_black_border_pressed.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/button_square_black_border_pressed.xml
@@ -12,6 +12,6 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#9E9E9E"
+        android:color="#FFFFFF"
         />
 </shape>
