--- a/Infortainment_Control/app/src/main/res/drawable/listview_cell_light.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/listview_cell_light.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="3dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-    <stroke android:width="1dp" android:color="#FFFFFF"/>
-    <solid android:color="#546E7A"></solid>
+    <stroke android:width="1dp" android:color="#000000"/>
+    <solid android:color="#455A64"></solid>
 </shape>
