--- a/Infortainment_Control/app/src/main/res/drawable/plot_background2.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/plot_background2.xml
@@ -3,5 +3,5 @@
     <corners android:radius="3dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
     <stroke android:width="1dp" android:color="#FFFFFF"/>
-    <solid android:color="#546E7A"></solid>
+    <solid android:color="#263238"></solid>
 </shape>
