--- a/Infortainment_Control/app/src/main/res/layout/dvd_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/dvd_layout.xml
@@ -78,9 +78,9 @@
                 android:shadowDx="0"
                 android:shadowDy="0"
                 android:shadowRadius="5"
-                android:text="Top Menu"
+                android:text="Eject"
                 android:textColor="#FFFFFF"
-                android:textSize="10dp" />
+                android:textSize="10dp"/>
 
             <Button
                 android:id="@+id/directional_up_btn"
