--- a/Infortainment_Control/app/src/main/res/layout/settings_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/settings_layout.xml
@@ -42,14 +42,14 @@
                 android:textSize="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Manufacturer"
+                android:text="Mark-Test"
                 android:paddingLeft="10dp" />
 
             <Spinner
                 android:id="@+id/manufacturer_input"
                 android:layout_width="230dp"
                 android:layout_height="match_parent"
-                android:textSize="30sp"                android:entries="@array/tv_manufacturer_array"
+                android:textSize="30sp"
                 android:prompt="@string/manufacturer_input_prompt"
                 android:layout_alignBaseline="@+id/manufacturer_input_label"
                 android:layout_alignBottom="@+id/manufacturer_input_label"
