television view shows active TV's name

--- a/Infortainment_Control/app/src/main/res/layout/tv_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/tv_layout.xml
@@ -401,4 +401,13 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/activeDeviceTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.15"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="14sp"/>
+
 </LinearLayout>
